--- a/scss/style.scss
+++ b/scss/style.scss
@@ -253,6 +253,94 @@ body {
     }
 }
 
+.choose-ability-component{
+    background-color: var(--bs-secondary-background);
+    margin: 0;
+
+    .choose-ability-container {
+        width: 50%;
+    
+        .choose-ability-text-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+    
+            h1 {
+                text-align: center;
+                color: var(--bs-header-text);
+                margin-bottom: 15px;
+            }
+    
+            p {
+                text-align: center;
+                color: var(--bs-text);
+                margin: 0;
+            }
+        }
+    }
+
+    .divider-row {
+        padding: 20px 0 40px 0;
+    
+        #divider-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    
+            #divider {
+                background-color: var(--bs-primary);
+                width: 200px;
+                height: 3px;
+            }
+        }
+    }
+
+    .filter-row {
+        padding: 20px 0 40px 0;
+    
+        .filters {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            a {
+                text-decoration: none;
+                
+                .filter-container {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+        
+                    .filter-btn {
+                        display: flex;
+                        justify-content: center;
+                        img {
+                            height: 65%;
+                            width: 65%;
+                        }
+                    }
+        
+                    .filter-name {
+                        width: 100%;
+                        display: flex;
+                        justify-content: center;
+                        margin-top: 10px;
+        
+                        .filter-name-text {
+                            text-align: center;
+                            color: var(--bs-header-text);
+                            font-weight: bold;
+                            width: 100%;
+                        }
+                    } 
+                }
+            }
+        }
+    }
+}
+
 /****************** SECONDARY BLOCK ******************/
 
 .secondary-block-component {
