--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,14 +106,14 @@ body {
                 }
             }
 
-            .current-menu-item {
+            /* .current-menu-item {
                 a {
                     font-size: 18px;
                     letter-spacing: 0px;
                     color: var(--bs-primary);
                     text-decoration: none;
                 }
-            }
+            } */
         }
     }
 }
@@ -166,7 +166,7 @@ body {
             }
         }
 
-        .current-menu-item {
+        /* .current-menu-item {
             a {
                 width: 100%;
                 height: 100%;
@@ -174,7 +174,7 @@ body {
                 color: var(--bs-primary);
                 text-decoration: none;
             }
-        }
+        } */
     }
 
     .offcanvas {
@@ -253,8 +253,10 @@ body {
     }
 }
 
+/****************** CHOOSE AN ABILITY ******************/
+
 .choose-ability-component{
-    background-color: var(--bs-secondary-background);
+    background-color: var(--bs-primary-background);
     margin: 0;
 
     .choose-ability-container {
@@ -341,11 +343,108 @@ body {
     }
 }
 
+/****************** ABILITY INTRODUCTION ******************/
+
+.ability-introduction-component{
+    background-color: var(--bs-primary-background);
+    padding: 100px 0 30px 0;
+
+    .ability-introduction-container {
+        width: 50%;
+    
+        .ability-introduction-text-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+    
+            h1 {
+                text-align: center;
+                color: var(--bs-header-text);
+                margin-bottom: 15px;
+            }
+    
+            p {
+                text-align: center;
+                color: var(--bs-text);
+                margin: 0;
+            }
+        }
+    }
+
+    .divider-row {
+        padding-top: 20px;
+    
+        #divider-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    
+            #divider {
+                background-color: var(--bs-primary);
+                width: 200px;
+                height: 3px;
+            }
+        }
+    }
+}
+
+/****************** ABILITY MENU ******************/
+
+.ability-menu-component{
+    background-color: var(--bs-primary-background);
+    padding: 30px 0 30px 0;
+
+    .filter-row {
+        padding: 20px 0 20px 0;
+    
+        .filters {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            a {
+                text-decoration: none;
+                
+                .filter-container {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;
+        
+                    .filter-btn {
+                        display: flex;
+                        justify-content: center;
+                        img {
+                            height: 65%;
+                            width: 65%;
+                        }
+                    }
+        
+                    .filter-name {
+                        width: 100%;
+                        display: flex;
+                        justify-content: center;
+                        margin-top: 10px;
+        
+                        .filter-name-text {
+                            text-align: center;
+                            color: var(--bs-header-text);
+                            font-weight: bold;
+                            width: 100%;
+                        }
+                    } 
+                }
+            }
+        }
+    }
+}
+
 /****************** SECONDARY BLOCK ******************/
 
 .secondary-block-component {
     background-color: var(--bs-secondary-background);
-    padding: 100px 0 50px 0;
+    padding: 80px 0 80px 0;
 
     .row{
         padding: 30px 0;
@@ -389,6 +488,50 @@ body {
                 align-items: center;
                 height: 327px;
                 border: 6px solid var(--bs-primary);
+            }
+        }
+    }
+}
+
+/****************** FOOTER ******************/
+
+.footer{
+    background-color: var(--bs-primary-background);
+
+    .footer-row {
+        display: flex;
+        background-color: var(--bs-primary-background);
+
+        .social-links {
+            display: flex;
+            justify-content: center;
+        
+            .social-container {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 115px;
+                width: 100%;
+        
+                .social {
+                    display: flex;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    width: 35%;
+        
+                    a {
+                        display: flex;
+                        justify-content: space-evenly;
+                        align-items: center;
+                        width: 100%;
+        
+                        img {
+                            object-fit: cover;
+                            height: 50%;
+                            width: 50%;
+                        }
+                    }
+                }
             }
         }
     }
