--- a/scss/bootstrap/scss/_buttons.scss
+++ b/scss/bootstrap/scss/_buttons.scss
@@ -43,7 +43,7 @@
   &:hover {
     color: var(--#{$prefix}btn-hover-color);
     text-decoration: if($link-hover-decoration == underline, none, null);
-    background-color: var(--#{$prefix}btn-hover-bg);
+    background-color: #FF4A57;
     border-color: var(--#{$prefix}btn-hover-border-color);
   }
 
