--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -41,11 +41,16 @@
     .btn-primary {
         text-align: left;
         font-size: 18px;
-        font-weight: medium;
         letter-spacing: 0px;
         color: var(--bs-header-text);
         border: 2px solid var(--bs-primary);
+        background-color: transparent;
         border-radius: 25px;
         text-decoration: none;
+
+        &:hover {
+            color: var(--bs-header-text);
+            background-color: var(--bs-primary);
+        }
     }
 }
