--- a/scss/style.scss
+++ b/scss/style.scss
@@ -530,22 +530,6 @@ body {
                 padding: 20px;
                 margin-bottom: 20px;
 
-                .contacts-text-container {
-                    display: flex;
-                    justify-content: center;
-                    width: 100%;
-
-                    .contacts-text {
-                        color: var(--bs-header-text);
-                        margin: 0;
-    
-                        a {
-                            color: var(--bs-header-text);
-                            text-decoration: none;
-                        }
-                    }
-                }
-
                 .email-box {
                     display: flex;
                     justify-content: center;
@@ -554,7 +538,18 @@ body {
 
                     img {
                         width: 10%;
-                        margin-right: 10px;
+                    }
+
+                    .contacts-icon-container {
+                        display: flex;
+                        justify-content: center;
+                        width: 100%;
+                    }
+
+                    .contacts-text {
+                        color: var(--bs-header-text);
+                        margin: 0;
+                        padding-top: 18px;
                     }
                 }
 
@@ -563,9 +558,16 @@ body {
                     justify-content: center;
                     width: 90%;
 
+                    .contacts-icon-container {
+                        display: flex;
+                        justify-content: center;
+                        width: 100%;
+                    }
+
                     .contacts-text {
                         color: var(--bs-header-text);
                         margin: 0;
+                        padding-top: 16px;
     
                         a {
                             color: var(--bs-header-text);
@@ -574,8 +576,7 @@ body {
                     }
 
                     img {
-                        width: 10%;
-                        margin-right: 10px;
+                        width: 8%;
                     }
                 }
             }
