--- a/scss/bootstrap/scss/bootstrap.css
+++ b/scss/bootstrap/scss/bootstrap.css
@@ -2966,7 +2966,7 @@ textarea.form-control-lg {
 }
 .btn:hover {
   color: var(--bs-btn-hover-color);
-  background-color: var(--bs-btn-hover-bg);
+  background-color: #FF4A57;
   border-color: var(--bs-btn-hover-border-color);
 }
 .btn-check + .btn:hover {
@@ -12031,4 +12031,4 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
-}
+}/*# sourceMappingURL=bootstrap.css.map */
