--- a/style.css
+++ b/style.css
@@ -11966,6 +11966,55 @@ body {
   border: 6px solid var(--bs-primary);
 }
 
+/****************** FRONT PAGE - ABOUT ME ******************/
+.about-me-block-component {
+  background-color: var(--bs-secondary-background);
+  margin: 60px 0;
+}
+.about-me-block-component .about-me-header-row {
+  padding: 30px 0;
+}
+.about-me-block-component .about-me-header-row .about-me-header-container {
+  width: 50%;
+}
+.about-me-block-component .about-me-header-row .about-me-header-container .about-me-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.about-me-block-component .about-me-header-row .about-me-header-container .about-me-header h1, .about-me-block-component .about-me-header-row .about-me-header-container .about-me-header .h1 {
+  text-align: center;
+  color: var(--bs-header-text);
+  margin-bottom: 15px;
+}
+.about-me-block-component .about-me-row {
+  padding-bottom: 30px;
+}
+.about-me-block-component .about-me-row .about-me-block-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.about-me-block-component .about-me-row .about-me-block-image img {
+  width: 100%;
+  height: auto;
+}
+.about-me-block-component .about-me-row .about-me-block-text-container {
+  width: 50%;
+}
+.about-me-block-component .about-me-row .about-me-block-text-container h2, .about-me-block-component .about-me-row .about-me-block-text-container .h2 {
+  color: var(--bs-header-text);
+  text-align: left;
+  margin: 0 0 0 10px;
+  width: 95%;
+}
+.about-me-block-component .about-me-row .about-me-block-text-container p {
+  color: var(--bs-text);
+  margin: 20px 0 20px 10px !important;
+  width: 95%;
+}
+
 /****************** FRONT PAGE - CHOOSE AN ABILITY ******************/
 .choose-ability-component {
   background-color: var(--bs-primary-background);
@@ -12259,15 +12308,15 @@ body {
 .contact-me-component .wpforms-container .wpforms-field input {
   padding: 25px 15px;
   border-radius: 10px;
-  border-color: var(--bs-secondary-background);
-  background-color: var(--bs-primary-background);
-  color: var(--bs-header-text);
+  border-color: var(--bs-secondary-background) !important;
+  background-color: var(--bs-primary-background) !important;
+  color: var(--bs-header-text) !important;
   font-size: 20px;
 }
 .contact-me-component .wpforms-container .wpforms-field textarea {
   border-radius: 10px;
-  border-color: var(--bs-secondary-background);
-  background-color: var(--bs-primary-background);
+  border-color: var(--bs-secondary-background) !important;
+  background-color: var(--bs-primary-background) !important;
   color: var(--bs-header-text) !important;
   font-size: 20px;
 }
@@ -12287,6 +12336,12 @@ body {
 .contact-me-component .wpforms-container .wpforms-submit-container .wpforms-submit:hover {
   color: var(--bs-header-text) !important;
   background-color: var(--bs-primary) !important;
+}
+.contact-me-component .wpforms-container #wpforms-confirmation-50 {
+  background: var(--bs-primary-background) !important;
+  border: 1px solid var(--bs-primary) !important;
+  color: var(--bs-header-text) !important;
+  border-radius: 10px !important;
 }
 .contact-me-component .wpforms-container ::-moz-placeholder { /* Mozilla Firefox 19+ */
   color: var(--bs-text) !important;
