--- a/style.css
+++ b/style.css
@@ -11927,6 +11927,18 @@ body {
   padding: 0 16px 16px 16px;
 }
 
+/****************** WARNING ******************/
+.warning {
+  padding-top: 100px;
+  display: flex;
+  justify-content: center;
+  background-color: var(--bs-primary);
+}
+.warning h1, .warning .h1 {
+  color: var(--bs-header-text);
+  font-size: 18px;
+}
+
 /****************** PRIMARY BLOCK ******************/
 .primary-block-component {
   background-color: var(--bs-secondary-background);
@@ -12034,6 +12046,7 @@ body {
 }
 .news-feed-block-component .news-feed-row .card .card-body .card-title {
   color: var(--bs-header-text);
+  font-weight: 600;
 }
 .news-feed-block-component .news-feed-row .card .card-body .card-text {
   color: var(--bs-text);
